# brot-rs

./: .gitignore  .gitmodules  Cargo.toml
benches/: benchmark.rs
src/: gui.rs  main.rs  mandelbrot.rs  renderer.rs  video_renderer.rs
src/algorithms/: coloring.rs  mandelbrot.rs  mod.rs  naive_cpu.rs  opencl.rs
