[package]
name = "brot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.4.0"
prisma = "0.1.1"
angular-units = "0.2.4"
rayon = "1.5.1"
egui = { version = "0.17.0", path = "./egui/egui" }
eframe = {version = "0.17.0", path = "./egui/eframe" }
crossbeam-channel = "0.5.4"
rust_decimal = "1.23.1"
image = "0.24.1"
ocl = { version = "0.19", optional = true }
fontdue = "0.7.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui_glow = { version = "0.17.0", path = "./egui/egui_glow"}
egui-winit = "0.17.0"

[features]
default = ["opencl"]
opencl = ["ocl"]